manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: three-tier-1

spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres

    ports:
    - protocol: TCP
      port: 5432
